--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>Lets get this started on {{title}} </h1>
+<div class="row justify-content-center">
+    <div class="card mt-sm-3 col-md-8">
+      <div class="card-body">
+        <h3 class="mb-0">Artist Directory</h3>
+        <div class="form-group">
+          <div class="form-label"></div>
+          <input class="form-control mt-2" type="text">
+        </div><!-- form-group -->
+      </div><!-- card-body -->
+    </div><!-- card -->
+  </div><!-- row -->
