--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
               <div class="media">
                 <div class="media-body align-self-center">
                   <h5 class="m-0">{{artist.name}}</h5>
+                  {{artist.reknown}}
                 </div><!-- media body -->
               </div><!-- media -->
           </a><!-- link -->
