--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,9 @@
     <div class="row justify-content-center">
       <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start"  *ngFor="let artist of artist;">
+          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start"
+          *ngFor="let artist of artist;"
+          (click)="showArtist($event)">
               <div class="media">
                 <div class="media-body align-self-center">
                   <h5 class="m-0">{{artist.name}}</h5>
