--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start"
           *ngFor="let artist of artist;"
-          (click)="showArtist($event, artist)">
+          (click)="showArtist(artist)">
               <div class="media">
                 <div class="media-body align-self-center">
                   <h5 class="m-0">{{artist.name}}</h5>
