--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
           *ngFor="let artist of artist;"
           (click)="showArtist(artist)">
               <div class="media">
-                <img class = "mr-3 rounded align-self-center image-fluid" style= "width: 70px;"src = "" alt = "">
+                <img class = "mr-3 rounded align-self-center image-fluid" style= "width: 70px;"src = "{{'./assets/images/' + artist.shortname + '_tn.jpg'}}" alt = "{{'Photo of ' + artist.name}}">
                 <div class="media-body align-self-center">
                   <h5 class="m-0">{{artist.name}}</h5>
                   {{artist.reknown}}
