--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           (click)="showArtist(artist)">
               <div class="media">
                 <!--Using expressions-->
-                <img class = "mr-3 rounded align-self-center image-fluid" style= "width: 70px;"src = "{{'./assets/images/' + artist.shortname + '_tn.jpg'}}" alt = "{{'Photo of ' + artist.name}}">
+                <img class = "mr-3 rounded align-self-center image-fluid" style= "width: 70px;"[src] = "'./assets/images/' + artist.shortname + '_tn.jpg'" alt = "{{'Photo of ' + artist.name}}">
                 <div class="media-body align-self-center">
                   <h5 class="m-0">{{artist.name}}</h5>
                   {{artist.reknown}}
