--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,8 @@
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start"
           *ngFor="let artist of artist;"
-          (click)="showArtist(artist)">
+          (click)="showArtist(artist)"
+          [style.backgroundColor]="artist.highlight ? '#EEE' : '#FFF' ">
               <div class="media">
                 <!--Using expressions-->
                 <img class = "mr-3 rounded align-self-center image-fluid" style= "width: 70px;"[src] = "'./assets/images/' + artist.shortname + '_tn.jpg'" alt = "{{'Photo of ' + artist.name}}">
