--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
           *ngFor="let artist of artist;"
           (click)="showArtist(artist)"
           [style.backgroundColor]="artist.highlight ? '#EEE' : '#FFF' ">
+          <app-artist-items></app-artist-items>
               <div class="media">
                 <!--Using expressions-->
                 <img class = "mr-3 rounded align-self-center image-fluid" style= "width: 70px;"[src] = "'./assets/images/' + artist.shortname + '_tn.jpg'" alt = "{{'Photo of ' + artist.name}}">
