It will add a placeholder in the form input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           {{query}}
           </div>
           <input class="form-control mt-2" type="text"
-          [(ngModel)] = "query">
+          [(ngModel)] = "query" placeholder="Enter here the name of the artist you are searching for">
         </div><!-- form-group -->
       </div><!-- card-body -->
     </div><!-- card -->
